# epsonia-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
bootstrap/: Cargo.toml  README.md  out.sh
bootstrap/src/: main.rs
epsonia-checks/: Cargo.toml
epsonia-checks/src/: check.rs  file_exists.rs  hidden_check.rs  lib.rs
epsonia-checks/src/checks/: check.rs  file_exists.rs  mod.rs
epsonia-core/: Cargo.toml
epsonia-core/src/: checks_config.rs  config.rs  engine.rs  lib.rs  main.rs  models.rs
epsonia-core/src/config/: checks.rs  config.rs  mod.rs
epsonia-util/: Cargo.toml
epsonia-util/src/: lib.rs
examples/: README.md  checks.json  config.json
