[package]
name = "epsonia-core"
version = "0.1.0"
authors = ["Matees <matees.net>"]
edition = "2021"
homepage = "https://epsonia.matees.net"
repository = "https://github.com/maytees/epsonia-rs"
license = "Apache-2.0 license"

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "derive"] }
epsonia-checks = { version = "0.1.0", path = "../epsonia-checks"}
markdown = "1.0.0-alpha.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
notify-rust = "4"
